# kangnam-client

./: .gitignore  README.md  electron-builder.yml  electron-vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
docs/: README_ko.md
figma-screens/: screen1-empty-dark.figma.tsx
sidecar/: mcp-bridge.ts  package.json
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: preset-agents.json  preset-skills.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: analyzer.md  comparator.md  cowork.md  eval.md  generate.md  generate_refs.md  grader.md  improve.md
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/auth/: credentials.rs  manager.rs  mod.rs  oauth_server.rs  pkce.rs  token_store.rs
src-tauri/src/cli/: adapter.rs  manager.rs  mod.rs  registry.rs  types.rs
src-tauri/src/cli/adapters/: claude.rs  codex.rs
src-tauri/src/commands/: agents.rs  auth.rs  chat.rs  claude_commands.rs  cli.rs  conv.rs  cowork.rs  eval.rs  mcp.rs  mod.rs  prompts_ai.rs  settings.rs  skills.rs
src-tauri/src/db/: agents.rs  connection.rs  conversations.rs  mod.rs  schema.rs  skills.rs
src-tauri/src/mcp/: bridge.rs  types.rs
src-tauri/src/providers/: antigravity.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  mock.rs  mod.rs  router.rs  sse.rs  types.rs
src-tauri/src/rpc/: dispatcher.rs  handlers.rs  mod.rs  types.rs
src-tauri/src/server/: broadcast.rs  mcp.rs  mod.rs  router.rs  saver.rs  ws.rs
src-tauri/src/skills/: ai.rs
(+167 files in other folders)
