[package]
name = "kangnam-client"
version = "2.0.0"
edition = "2021"
authors = ["Kangnam Kim <kangnam7654@naver.com>"]

[lib]
name = "kangnam_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
keyring = "3"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
tokio-stream = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
async-trait = "0.1"
thiserror = "2"
chrono = "0.4"
dirs = "6"
url = "2"
urlencoding = "2"
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
